fix: MA-24-movie title not fit in container when resize to smaller screen

--- a/src/utils/movie_content.scss
+++ b/src/utils/movie_content.scss
@@ -160,7 +160,7 @@ $laptop-screen: 1200px;
     &__movieTitle {
       top:15px;
       text-align: left;
-      font-size: 2rem;
+      font-size: 1.5rem;
     }
     &_tagList {
       justify-content: left;
